Options working except random n group

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
-	<script type="text/javascript" src="js/main.js">				
+	<h1>Pairing Program</h1>
+ 		<select>
+			<option value="studentPairing">Random Student</option>
+			<option value="neighbourPairing">Neighbour Pairing</option>
+			<option value="randomPairing">Random Pairing</option>
+			<option value="neighbourThreePairing">Group of Three</option>
+			<option value="randomNPairing">Random Group</option>
+		</select>	
+		<input type="number" class="people-number" />
+		<button class="choose-option">Go!</button>
+		<div class="pairing-list">
+		</div>
+		<script type="text/javascript" src="js/main.js"></script>				
 </body>
 </html>  
