--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Beck's Pairing Program</title>
+	<title>Beck's Student & Pairing Picker</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h1>Pairing Program</h1>
+	<h1>Student & Team Picker</h1>
 	<form id="group-generator">
  			<select name="group-criteria">
 				<option value="studentPairing">Random Student</option>
