refactored hide/show functions & removing prev li items

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Beck's Student & Pairing Picker</title>
+	<title>Beck's Pairing Program</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h1>Student & Team Picker</h1>
+	<h1>Pairing Program</h1>
 	<form id="group-generator">
  			<select name="group-criteria">
 				<option value="studentPairing">Random Student</option>
@@ -15,7 +15,7 @@
 				<option value="neighbourThreePairing">Group of Three</option>
 				<option value="randomNPairing">Random Group</option>
 			</select>	
-			<input type="number" class="people-number" />
+			<input type="number" class="people-number hidden" />
 			<input type='Submit'class="choose-option" value="Pick">
 		</form>
 		<ul class="pairing-list">
