--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 				<option value="neighbourPairing">Neighbour Pairing</option>
 				<option value="randomPairing">Random Pairing</option>
 				<option value="neighbourThreePairing">Group of Three</option>
-				<option value="randomNPairing">Random Group</option>
+        <option value="randomNPairing">Random Group</option>
 			</select>	
-			<input type="number" class="people-number hidden" />
-			<input type='Submit'class="choose-option" value="Pick">
+  			<input type="number" class="people-number hidden" />
+	e		<input type='Submit'class="choose-option" value="Pick">
 		</form>
 		<ul class="pairing-list">
 		</ul>
